# scrubby

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  fly.toml
pkgs/: claude.lua  func.lua  homeassistant.lua  spotify.lua
plugins/: cat_fact.lua  ha.lua  help.lua  idler.lua  llm.lua  remind.lua  spotify.lua  test.example  test.rhai  time_zone_test.lua
scripts/: test.lua
src/: bot.rs  channel.rs  dispatcher.rs  event_dispatch.rs  event_handler.rs  handler.rs  llm.rs  lua.rs  lua_context.rs  lua_loader.rs  main.rs  plugins.rs  storage.rs  user_data.rs
src/audio/: mod.rs
src/bindings/: bot.rs  http.rs  json.rs  mod.rs
src/claude/: api.rs  content.rs  error.rs  mod.rs  prompt.txt  retry.rs  schema.rs  util.rs
src/claude/tools/: mod.rs
src/llm/: content.rs  error.rs  mod.rs  schema.rs
src/plugins/: mod.rs  plugin_env.rs
src/plugins/modules/: bot.rs  http.rs  mod.rs
src/voice/: mod.rs
