[package]
name = "scrubby2"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "rustls_backend"] }
anyhow = "1.0.81"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
reqwest = "0.12.5"
rhai = { version = "1.19.0", features = ["serde", "sync"] }
base64 = "0.22.1"
image = "0.25.2"
