[package]
name = "scrubby2"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "rustls_backend"] }
anyhow = "1.0.81"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
reqwest = { version = "0.12.5", features = ["rustls-tls"], default-features = false }
base64 = "0.22.1"
image = "0.25.2"
regex = "1.10.6"
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3.3"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
handlebars = "6.1.0"
ureq = "2.10.1"
scraper = "0.21.0"
whisper-rs = "0.13.2"
magnum = "1.0.1"
itertools = "0.13.0"
