[package]
name = "scrubby2"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "rustls_backend"] }
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
base64 = "0.22"
image = "0.25"
regex = "1.10"
reqwest-retry = "0.6"
reqwest-middleware = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
handlebars = "6.1"
ureq = "2.10"
scraper = "0.21"
whisper-rs = "0.13"
magnum = "1.0"
itertools = "0.13"
